--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -66,26 +66,35 @@ body {
 }
 
 .banner {
-    text-align: center;
-    background-color: #D21885;
-    color: white;
-    padding: 50px 0;
-    margin: 0;
+    position: relative;
+    height: 70vh;
+    width: 100%;
+    overflow: hidden;
 }
 
 .banner img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-.banner h1 {
-    margin: 20px 0 10px;
+.banner-text {
+    position: absolute;
+    top: 50%;
+    right: 10%;
+    transform: translateY(-50%);
+    text-align: right; 
+    color: white;
 }
 
-.banner p {
+.banner-text h1 {
     margin: 0;
+    font-size: 2.5em; 
+}
+
+.banner-text p {
+    margin: 10px 0 0;
+    font-size: 1.2em; 
 }
 
 .footer {
@@ -105,4 +114,13 @@ body {
     .search-bar input {
         width: 100%;
     }
-    .nav 
+    .nav a {
+        font-size: 24px;
+    }
+    .banner-text h1 {
+        font-size: 3em;
+    }
+    .banner-text p {
+        font-size: 1.5em;
+    }
+}
