minor changes with index and other html

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -115,7 +115,7 @@ body {
     padding: 20px;
     width: 300px; 
     margin-bottom: 20px; 
-    position: relative; 
+    position: relative; /* Required for absolute positioning */
 }
 .product-card img {
     width: 100%;
@@ -154,6 +154,12 @@ body {
     cursor: pointer;
     font-size: 16px;
 }
+.pink-line{
+    height: 4px;
+    background-color: #D21885;
+    margin: 0;
+}
+
 .footer {
     background-color: #fff;
     color: #D21885;
@@ -179,7 +185,7 @@ body {
 }
 
 .footer .shop-now h3,
-.footer .sitemap h3,
+.footer .navigation h3,
 .footer .join-pack h3 {
     font-size: 18px;
     margin-bottom: 10px;
@@ -194,17 +200,17 @@ body {
     padding: 5px; /* Add padding to separate images */
 }
 
-.footer .sitemap ul {
+.footer .navigation ul {
     list-style: none;
     padding: 0;
     text-align: center; /* Center align list items */
 }
 
-.footer .sitemap ul li {
+.footer .navigation ul li {
     margin: 10px 0;
 }
 
-.footer .sitemap ul li a {
+.footer .navigation ul li a {
     color: #D21885;
     text-decoration: none;
     margin-left: 0;
@@ -262,6 +268,7 @@ body {
     margin-left: 30px;
     color: #D21885;
 }
+
 @media (min-width: 1024px) { /* For larger screens like laptop */
     .header img {
         max-height: 50px;
@@ -301,7 +308,7 @@ body {
     }
 
     .footer .shop-now h3,
-    .footer .sitemap h3,
+    .footer .navigation h3,
     .footer .join-pack h3 {
         text-align: center; /* Center the heading */
     }
