--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -66,7 +66,7 @@ body {
 }
 
 .golden-section {
-    background: linear-gradient(to bottom, #CEAE37, #FFE3B3);
+    background: linear-gradient(to right, #CEAE37, #FFE3B3);
     padding: 20px 0;
     height: 0;
 }
@@ -128,7 +128,7 @@ body {
 }
 
 .footer .shop-now h3,
-.footer .sitemap h3,
+.footer .webpage h3,
 .footer .join-pack h3 {
     font-size: 18px;
     margin-bottom: 10px;
@@ -143,17 +143,17 @@ body {
     padding: 5px; 
 }
 
-.footer .sitemap ul {
+.footer .webpage ul {
     list-style: none;
     padding: 0;
     text-align: center; 
 }
 
-.footer .sitemap ul li {
+.footer .webpage ul li {
     margin: 10px 0;
 }
 
-.footer .sitemap ul li a {
+.footer .webpage ul li a {
     color: #D21885;
     text-decoration: none;
     margin-left: 0;
@@ -240,7 +240,7 @@ body {
     }
 
     .footer .shop-now h3,
-    .footer .sitemap h3,
+    .footer .webpage h3,
     .footer .join-pack h3 {
         text-align: center; 
     }
