--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -1,8 +1,11 @@
 body {
     font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+    font-variation-settings: "width" 100;
     margin: 0;
     padding: 0;
-    background-color: #fdfdfd;
 }
 
 .header {
@@ -22,14 +25,48 @@ body {
 
 .nav {
     display: flex;
-    gap: 20px;
+    gap: 30px;
+    align-items: center; 
+    justify-content: center;
 }
 
 .nav a {
+    font-size: 16px;    
     text-decoration: none;
     color: #D21885;
     font-weight: bold;
-    font-size: 16px;
+}
+
+.dropdown {
+    position: relative;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 200px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    top: 100%; 
+    left: 0; 
+}
+
+.dropdown-content a {
+    color: #D21885;
+    padding: 12px 16px;
+    text-decoration: none;
+    text-align: center;
+    display: block;
+    font-size: 14px;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 .search-bar {
@@ -101,6 +138,79 @@ body {
 .banner-text p {
     margin: 10px 0 0;
     font-size: 1.2em; 
+}
+
+.collections {
+    text-align: center;
+    background-color: #D21885;
+    padding: 10px 0;
+}
+
+.collections h2 {
+    font-size: 2.5em;
+    color: white;
+}
+
+.collection-items {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 50px;
+}
+
+.collection-items .card {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    transition: transform 0.2s;
+    width: 200px; 
+}
+
+.collection-items .card:hover {
+    transform: scale(1.05);
+}
+
+.collection-items .card img {
+    width: 100%;
+    height: auto;
+}
+
+.collection-items .card .card-content {
+    padding: 15px;
+    text-align: center;
+}
+
+.collection-items .card .card-content p {
+    margin: 0;
+    font-size: 1.1em;
+    color: #D21885;
+    font-weight: bold;
+}
+
+.treatment {
+    background-color: #D21885;
+    text-align: center;
+    padding: 50px 0;
+}
+
+.treatment {
+    background-color: #D21885;
+    text-align: center;
+    padding: 50px 0;
+}
+
+.treatment h2 {
+    font-size: 2.5em;
+    color: white;
+}
+
+.treatment video {
+    width: 80%;
+    border: 2px solid #D21885;
+    border-radius: 10px;
+    max-height: 500px; 
 }
 
 .footer {
@@ -214,7 +324,6 @@ body {
 @media (min-width: 1024px) { 
     .header img {
         max-height: 50px;
-        margin-left: 50%;
     }
     .search-bar {
         width: 300px;
