--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -108,36 +108,17 @@ body {
     height: 0;
 }
 
+.carousel-item img {
+    width: 100%;
+    height: 80vh;
+    object-fit: cover;
+}
+
 .banner {
     position: relative;
     height: 70vh;
     width: 100%;
     overflow: hidden;
-}
-
-.banner img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.banner-text {
-    position: absolute;
-    top: 50%;
-    right: 10%;
-    transform: translateY(-50%);
-    text-align: right; 
-    color: white;
-}
-
-.banner-text h1 {
-    margin: 0;
-    font-size: 2.5em; 
-}
-
-.banner-text p {
-    margin: 10px 0 0;
-    font-size: 1.2em; 
 }
 
 .collections {
@@ -238,7 +219,7 @@ body {
 }
 
 .footer .shop-now h3,
-.footer .webpage h3,
+.footer .navigation h3,
 .footer .join-pack h3 {
     font-size: 18px;
     margin-bottom: 10px;
@@ -253,18 +234,18 @@ body {
     padding: 5px; 
 }
 
-.footer .webpage ul {
+.footer .navigation ul {
     list-style: none;
     padding: 0;
     text-align: center; 
 }
 
-.footer .webpage ul li {
+.footer .navigation ul li {
     margin: 10px 0;
 }
 
-.footer .webpage ul li a {
-    color: #D21885;
+.footer .navigation ul li a {
+    color: #D21885 ;
     text-decoration: none;
     margin-left: 0;
     text-align: center;
@@ -321,6 +302,7 @@ body {
     margin-left: 30px;
     color: #D21885;
 }
+
 @media (min-width: 1024px) { 
     .header img {
         max-height: 50px;
@@ -349,7 +331,7 @@ body {
     }
 
     .footer .shop-now h3,
-    .footer .webpage h3,
+    .footer .navigation h3,
     .footer .join-pack h3 {
         text-align: center; 
     }
