--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,6 +6,7 @@ body {
     font-variation-settings: "wdth" 100;
     margin: 0;
     padding: 0;
+    margin-top: 0;
 }
 .header {
     background-color: #ffffff;
