--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,7 +6,6 @@ body {
     font-variation-settings: "wdth" 100;
     margin: 0;
     padding: 0;
-    margin-top: 0;
 }
 .header {
     background-color: #ffffff;
@@ -79,6 +78,9 @@ body {
     padding-top: 0;
     margin: 0; 
 }
+.banner h1{
+    margin: 10px;
+}
 .content {
     text-align: center;
     padding: 0; 
@@ -101,6 +103,7 @@ body {
     background-color: #D21885;
     padding: 20px 0;
 }
+
 .products {
     display: flex;
     flex-wrap: wrap; 
@@ -108,6 +111,7 @@ body {
     gap: 20px;
     padding: 20px;
 }
+
 .product-card {
     background-color: white;
     border: 1px solid #ddd;
@@ -117,35 +121,44 @@ body {
     width: 300px; 
     margin-bottom: 20px; 
     position: relative; 
+    overflow: hidden; /* Ensure hover image does not overflow */
 }
+
 .product-card img {
     width: 100%;
     height: auto;
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 20px;
-    margin-bottom: 20px;
+    transition: opacity 0.3s ease;
 }
-.product-card .product-hover-image {
-    display: none;
+
+.product-card .product-image-hover {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: auto;
+    height: calc(100% - 234px); /* Adjust to leave space for product name */
+    opacity: 0;
     z-index: 1;
 }
-.product-card:hover .product-hover-image {
-    display: block;
+
+.product-card:hover .product-image-hover {
+    opacity: 1;
 }
+
+.product-card:hover .product-image-default {
+    opacity: 0;
+}
+
 .product-card h3 {
     color: #D21885;
     font-size: 18px;
-    margin: 0 0 10px;
+    margin: 40px; /* Adjusted to add margin for spacing */
 }
+
 .product-card .stars {
     color: #FFD700;
     margin-bottom: 20px;
 }
+
 .product-card button {
     background-color: #D21885;
     color: white;
@@ -174,7 +187,8 @@ body {
 
 .footer .container div {
     flex: 1;
-    margin: 10px;
+    margin: 20px;
+    padding-bottom: 20px;
     min-width: 200px;
     text-align: left; /* Adjust text alignment for content */
 }
@@ -242,6 +256,7 @@ body {
     padding: 10px 0;
     margin-top: 20px;
     text-align: center;
+    margin: 0;
 }
 
 .footer .bottom a {
@@ -251,7 +266,7 @@ body {
 }
 
 .social-icons {
-    margin: 10px 0;
+    margin: 5px 0;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -263,6 +278,13 @@ body {
     margin-left: 30px;
     color: #D21885;
 }
+.golden-line-footer {
+    height: 4px;
+    background-color: #C49F24;
+    margin: 0;
+    padding: 0;
+}
+
 @media (min-width: 1024px) { /* For larger screens like laptop */
     .header img {
         max-height: 50px;
@@ -291,6 +313,15 @@ body {
     }
     .product-card {
          width: calc(25% - 20px);
+    }
+    .product-card .product-image-hover {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: calc(100% - 190px); /* Adjust to leave space for product name */
+        opacity: 0;
+        z-index: 1;
     }
     .footer .container {
         justify-content: center;
