Updated products conditioner

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -290,6 +290,7 @@ body {
     margin: 0;
     padding: 0;
 }
+}
 
 @media (min-width: 1024px) { /* For larger screens like laptop */
     .header img {
