--- a/assets/styles.css
+++ b/assets/styles.css
@@ -13,9 +13,11 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    margin-top: 15px;
+    padding: 20px 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
 .header img {
     height: max-content;
     max-height: 40px;
@@ -28,12 +30,46 @@ body {
     align-items: center; 
     justify-content: center;
 }
+
 .nav a {
-    font-size: 16px;
+    font-size: 16px;    
     text-decoration: none;
     color: #D21885;
     font-weight: bold;
 }
+
+.dropdown {
+    position: relative;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 200px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    top: 100%; 
+    left: 0; 
+}
+
+.dropdown-content a {
+    color: #D21885;
+    padding: 12px 16px;
+    text-decoration: none;
+    text-align: center;
+    display: block;
+    font-size: 14px;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 .search-bar {
     display: flex;
     align-items: center;
@@ -43,24 +79,22 @@ body {
     border-radius: 25px;
     margin-right: 20px;
 }
+
 .search-bar input {
     border: none;
     outline: none;
     padding: 5px;
     border-radius: 25px;
 }
+
 .search-bar i {
     color: #D21885;
 }
+
 .search-bar button {
     border: none;
     background: none;
     cursor: pointer;
-}
-
-.search-bar img {
-    height: 20px;
-    width: 20px;
 }
 
 .golden-line {
