--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -13,7 +13,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    margin-top: 15px;
+    padding: 20px 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
