updated index css

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -129,6 +129,7 @@ body {
 }
 
 .collections h1 {
+    font-weight: bold;
     font-size: 2.5em;
     color: white;
 }
@@ -184,6 +185,7 @@ body {
 }
 
 .treatment h2 {
+    font-weight: bold;
     font-size: 2.5em;
     color: white;
 }
