--- a/assets/single-products-style.css
+++ b/assets/single-products-style.css
@@ -25,21 +25,107 @@ body {
 }
 
 .header img {
+    height: max-content;
+    max-height: 40px;
+    margin-left: 50px;
+}
+
+.nav {
+    display: flex;
+    gap: 30px;
+    align-items: center; 
+    justify-content: center;
+}
+
+.nav a {
+    font-size: 16px;    
+    text-decoration: none;
+    color: #D21885;
+    font-weight: bold;
+}
+
+.dropdown {
+    position: relative;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 200px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    top: 100%; 
+    left: 0; 
+}
+
+.dropdown-content a {
+    color: #D21885;
+    padding: 12px 16px;
+    text-decoration: none;
+    text-align: center;
+    display: block;
+    font-size: 14px;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.search-bar {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    border: 2px solid #CF388D;
+    padding: 5px;
+    border-radius: 25px;
+    margin-right: 20px;
+}
+
+.search-bar input {
+    border: none;
+    outline: none;
+    padding: 5px;
+    border-radius: 25px;
+}
+
+.search-bar i {
+    color: #D21885;
+}
+
+.search-bar button {
+    border: none;
+    background: none;
+    cursor: p
+
+.card1 {
+    text-align: center;
+    color: #fff;
+    background-color: #f071ac;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.card1 img {
     width: 150px;
     height: auto;
 }
 
-.header h1 {
+.card1 h1 {
     margin: 20px 0 10px;
     font-size: 24px;
 }
 
-.header p {
+.card1 p {
     margin: 10px 0;
     font-size: 16px;
 }
 
-.header button {
+.card1 button {
     background-color: #fff;
     color: #f071ac;
     border: none;
@@ -49,9 +135,10 @@ body {
     cursor: pointer;
 }
 
-.header button:hover {
+.card1 button:hover {
     background-color: #f9f9f9;
 }
+
 
 .tabs {
     display: flex;
