--- a/assets/single-products-style.css
+++ b/assets/single-products-style.css
@@ -6,73 +6,92 @@ body {
 }
 
 .header {
+    background-color: #ffffff;
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    background-color: #f071ac;
-    padding: 10px 20px;
-    color: #fff;
+    align-items: center;
+    margin-top: 15px;
+    padding: 20px 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .header img {
-    height: 50px;
+    height: auto;
+    max-height: 40px;
+    margin-left: 50px;
 }
 
 .nav {
     display: flex;
-    align-items: center;
+    gap: 30px;
+    align-items: center; 
+    justify-content: center;
 }
 
 .nav a {
-    color: #fff;
+    font-size: 16px;    
     text-decoration: none;
-    margin: 0 10px;
-    font-weight: 600;
+    color: #D21885;
+    font-weight: bold;
+}
+
+.dropdown {
     position: relative;
 }
 
-.nav .dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.nav .dropdown-content {
+.dropdown-content {
     display: none;
     position: absolute;
-    background-color: #fff;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    background-color: #f9f9f9;
+    min-width: 200px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     z-index: 1;
+    top: 100%; 
+    left: 0; 
 }
 
-.nav .dropdown-content a {
-    color: #f071ac;
+.dropdown-content a {
+    color: #D21885;
     padding: 12px 16px;
     text-decoration: none;
+    text-align: center;
     display: block;
+    font-size: 14px;
 }
 
-.nav .dropdown-content a:hover {
+.dropdown-content a:hover {
     background-color: #f1f1f1;
 }
 
-.nav .dropdown:hover .dropdown-content {
+.dropdown:hover .dropdown-content {
     display: block;
 }
 
 .search-bar {
     display: flex;
     align-items: center;
+    gap: 5px;
+    border: 2px solid #CF388D;
+    padding: 5px;
+    border-radius: 25px;
+    margin-right: 20px;
 }
 
 .search-bar input {
-    padding: 5px;
     border: none;
-    border-radius: 5px;
+    outline: none;
+    padding: 5px;
+    border-radius: 25px;
 }
 
 .search-bar i {
-    margin-right: 5px;
+    color: #D21885;
+}
+
+.search-bar button {
+    border: none;
+    background: none;
+    cursor: pointer;
 }
 
 .golden-line {
