--- a/assets/css/single-products-style.css
+++ b/assets/css/single-products-style.css
@@ -191,3 +191,71 @@ body {
     padding: 20px;
     border-radius: 10px;
 }
+
+@media (min-width: 1024px) { /* For larger screens like laptop */
+    .header img {
+        max-height: 50px;
+    }
+    .search-bar {
+        width: 300px;
+        margin-right: 10%;
+    }
+    .nav a{
+        font-size: 24px;
+        margin-left: 200px;
+        gap: 30px;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .search-bar input {
+        width: 100%; 
+    }
+    .content img {
+        width: 100%;
+    }
+    .products {
+         justify-content: center; 
+         gap: 20px;
+    }
+    .product-card {
+         width: calc(30% - 60px);
+    }
+    .product-card .product-image-hover {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: calc(100% - 190px); /* Adjust to leave space for product name */
+        opacity: 0;
+        z-index: 1;
+    }
+    .footer .container {
+        justify-content: center;
+    }
+
+    .footer .container div {
+        min-width: 250px;
+        text-align: left; 
+    }
+
+    .footer .shop-now h3,
+    .footer .navigation h3,
+    .footer .join-pack h3 {
+        text-align: center; 
+    }
+
+    .footer .shop-now img {
+        margin: 0 auto; 
+        height: 50px; 
+    }
+    .footer .join-pack button {
+        width: calc(110% - 35px);
+    }
+
+    .golden-line-footer {
+        height: 4px;
+        background-color: #C49F24;
+        margin: 0;
+        padding: 0;
+    }
+}
