--- a/assets/css/single-products-style.css
+++ b/assets/css/single-products-style.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 15px;
+    /*margin-top: 15px;*/
     padding: 20px 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -97,7 +97,7 @@ body {
 .golden-line {
     height: 5px;
     background-color: #d4af37;
-    margin: 20px 0;
+    margin: 0;
 }
 
 .banner {
@@ -127,17 +127,20 @@ body {
 }
 
 .card1 img {
-    width: 150px;
+    width: 380px;
     height: auto;
 }
 
 .card1 h1 {
     margin: 20px 0 10px;
     font-size: 24px;
+    font-weight: bold;
 }
 
 .card1 p {
     margin: 10px 0;
+    padding-left: 250px;
+    padding-right: 250px;
     font-size: 16px;
 }
 
