updated index css file name and some minor revisions inside index.html

--- a/assets/css/homepage-stylesheet.css
+++ b/assets/css/homepage-stylesheet.css
@@ -3,7 +3,7 @@ body {
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
-    font-variation-settings: "width" 100;
+    font-variation-settings: "width" 100; 
     margin: 0;
     padding: 0;
 }
@@ -129,6 +129,7 @@ body {
 }
 
 .collections h1 {
+    margin: 20px 0 20px 0;
     font-weight: bold;
     font-size: 2.5em;
     color: white;
@@ -185,6 +186,7 @@ body {
 }
 
 .treatment h2 {
+    margin: 20px 0 20px 0;
     font-weight: bold;
     font-size: 2.5em;
     color: white;
@@ -210,15 +212,16 @@ body {
     flex-wrap: wrap;
     justify-content: space-around;
     text-align: center;
-    margin: 0 auto; 
-    max-width: 1200px; 
+    margin: 0 auto;
+    max-width: 1200px;
 }
 
 .footer .container div {
     flex: 1;
-    margin: 10px;
+    margin: 20px;
+    padding-bottom: 20px;
     min-width: 200px;
-    text-align: left; 
+    text-align: left;
 }
 
 .footer .shop-now h3,
@@ -226,21 +229,21 @@ body {
 .footer .join-pack h3 {
     font-size: 18px;
     margin-bottom: 10px;
-    text-align: center; 
+    text-align: center;
 }
 
 .footer .shop-now img {
     display: block;
-    margin: 0 auto; 
-    width: auto; 
-    height: 40px; 
-    padding: 5px; 
+    margin: 0 auto;
+    width: auto;
+    height: 40px;
+    padding: 5px;
 }
 
 .footer .navigation ul {
     list-style: none;
     padding: 0;
-    text-align: center; 
+    text-align: center;
 }
 
 .footer .navigation ul li {
@@ -248,10 +251,13 @@ body {
 }
 
 .footer .navigation ul li a {
-    color: #D21885 ;
+    color: #D21885;
     text-decoration: none;
-    margin-left: 0;
     text-align: center;
+}
+
+.footer .navigation ul li a:hover {
+    text-decoration: underline;
 }
 
 .footer .join-pack p {
@@ -264,18 +270,22 @@ body {
 .footer .join-pack input {
     padding: 10px;
     margin: 10px 0;
-    width: calc(100% - 22px);
+    width: 100%;
+    max-width: 350px;
     border: 1px solid #D21885;
     color: #D21885;
+    box-sizing: border-box;
 }
 
 .footer .join-pack button {
     padding: 10px;
-    width: calc(110% - 32px);
+    width: 100%;
+    max-width: 350px;
     background-color: #D21885;
     color: #fff;
     border: none;
     cursor: pointer;
+    box-sizing: border-box;
 }
 
 .footer .bottom {
@@ -284,6 +294,7 @@ body {
     padding: 10px 0;
     margin-top: 20px;
     text-align: center;
+    margin: 0;
 }
 
 .footer .bottom a {
@@ -293,7 +304,7 @@ body {
 }
 
 .social-icons {
-    margin: 10px 0;
+    margin: 5px 0;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -302,8 +313,14 @@ body {
 .social-icons i {
     font-size: 30px;
     margin: 0 10px;
-    margin-left: 30px;
     color: #D21885;
+}
+
+.golden-line-footer {
+    height: 4px;
+    background-color: #C49F24 !important;
+    margin: 0;
+    padding: 0;
 }
 
 @media (min-width: 1024px) { 
