--- a/assets/css/homepage-stylesheet.css
+++ b/assets/css/homepage-stylesheet.css
@@ -227,6 +227,7 @@ body {
 .footer .shop-now h3,
 .footer .navigation h3,
 .footer .join-pack h3 {
+    font-weight: bolder;
     font-size: 18px;
     margin-bottom: 10px;
     text-align: center;
@@ -323,44 +324,182 @@ body {
     padding: 0;
 }
 
-@media (min-width: 1024px) { 
-    .header img {
-        max-height: 50px;
+@media (max-width: 600px) {
+    body {
+        padding: 10px;
     }
-    .search-bar {
-        width: 300px;
-        margin-right: 10%;
-    }
-    .nav a{
-        font-size: 24px;
-        margin-left: 200px;
-        gap: 30px;
+    .header {
+        flex-direction: column;
         align-items: center;
-        justify-content: space-between;
+        padding: 10px;
     }
-    .search-bar input {
-        width: 100%; 
+    .header img {
+        margin: 0;
+        max-height: 30px;
     }
-    .footer .container {
-        justify-content: center;
-    }
-
-    .footer .container div {
-        min-width: 250px;
-        text-align: left; 
-    }
-
-    .footer .shop-now h3,
-    .footer .navigation h3,
-    .footer .join-pack h3 {
+    .nav {
+        flex-direction: column;
+        gap: 10px;
+        margin: 10px 0;
+        width: 100%;
         text-align: center; 
     }
-
-    .footer .shop-now img {
-        margin: 0 auto; 
-        height: 50px; 
+    .nav a {
+        font-size: 14px; 
     }
+    .search-bar {
+        width: 100%;
+        margin: 10px 0;
+    }
+    .golden-section {
+        padding: 10px 0;
+    }
+    .carousel-item img {
+        width: 100%;
+        height: auto;
+    }
+    .collections h1 {
+        font-size: 1.5em;
+    }
+    .collection-items {
+        flex-direction: column;
+        gap: 20px;
+    }
+    .collection-items .card {
+        width: 100%;
+    }
+    .treatment h2 {
+        font-size: 2em;
+    }
+    .treatment iframe {
+        width: 100%;
+        height: auto;
+    }
+    .footer {
+        padding: 10px 0;
+        text-align: center;
+        border-top: 4px solid #D21885;
+    }
+    .footer .container {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        margin: 0 auto;
+        padding: 0 10px; 
+    }
+    .footer .container div {
+        flex: 1;
+        margin: 20px 0;
+        padding-bottom: 20px;
+        min-width: 100%;
+        box-sizing: border-box;
+    }
+    .footer .shop-now img,
+    .footer .sitemap ul li a,
+    .footer .join-pack p,
+    .footer .join-pack input,
     .footer .join-pack button {
-        width: calc(110% - 35px);
+        margin: 0 auto;
+    }
+    .footer .shop-now img {
+        height: 30px;
+    }
+    .footer .sitemap ul li {
+        margin: 5px 0;
+    }
+    .footer .join-pack input,
+    .footer .join-pack button {
+        width: 100%;
+        max-width: 100%;
+        margin: 10px 0; 
+        box-sizing: border-box; 
+    }
+    .footer .social-icons {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 5px;
+    }
+    .footer .social-icons i {
+        font-size: 24px;
+    }
+    .footer .bottom {
+        padding: 10px 0;
+        margin-top: 20px;
+        text-align: center;
+    }
+}
+
+@media (min-width: 601px) and (max-width: 1024px) {
+    body {
+        padding: 15px;
+    }
+    .header {
+        flex-direction: row;
+        align-items: center;
+        padding: 15px;
+    }
+    .header img {
+        margin: 0;
+        max-height: 35px;
+    }
+    .nav {
+        flex-direction: row;
+        gap: 20px;
+        margin: 10px 0;
+    }
+    .search-bar {
+        width: 50%;
+        margin: 10px 0;
+    }
+    .golden-section {
+        padding: 15px 0;
+    }
+    .carousel-item img {
+        width: 100%;
+        height: 400px;
+    }
+    .collections h1 {
+        font-size: 2em;
+    }
+    .collection-items {
+        flex-direction: row;
+        gap: 40px;
+    }
+    .collection-items .card {
+        width: 45%;
+    }
+    .treatment h2 {
+        font-size: 2.5em;
+    }
+    .treatment iframe {
+        width: 100%;
+        height: 400px;
+    }
+    .footer .container {
+        flex-direction: row;
+        align-items: flex-start;
+        text-align: left;
+        margin: 0 auto;
+    }
+    .footer .container div {
+        flex: 1;
+        margin: 20px;
+        padding-bottom: 20px;
+        min-width: 45%;
+    }
+    .footer .join-pack input,
+    .footer .join-pack button {
+        width: 100%;
+        max-width: 100%;
+        margin: 10px 0; 
+        box-sizing: border-box; 
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1320px) {
+    .treatment iframe {
+        width: 100%;
+        height: auto;
     }
 }
