--- a/assets/css/single-products-style.css
+++ b/assets/css/single-products-style.css
@@ -110,7 +110,8 @@ body {
 
 .container {
     width: 80%;
-    margin: 0 auto;
+    margin: 50 auto;
+    margin-bottom: 40px;
     padding: 20px;
     background-color: #fff;
     border-radius: 10px;
