--- a/assets/css/products-page-styles.css
+++ b/assets/css/products-page-styles.css
@@ -449,14 +449,20 @@ body {
     }
     .header img {
         margin: 0;
-        max-height: 30px;
+        max-height: 35px;
     }
     .nav {
-        flex-direction: column;
-        gap: 10px;
+        flex-direction: row;
+        justify-content: center;
+        margin: 10px 0;
+        gap: 20px;
     }
     .nav a {
-        font-size: 14px;
+        font-size: 24px;
+        margin-left: 20px;
+        gap: 30px;
+        align-items: center;
+        justify-content: space-between;
     }
     .search-bar {
         width: 100%;
@@ -469,7 +475,15 @@ body {
         padding: 10px;
     }
     .content img {
-        width: 100%;
+        max-width: 100%;
+        max-height: 100%;
+        display: block;
+        margin: 0px;
+    }
+    .golden-section{
+        margin-top: 0;
+        padding: 20px 0px;
+        height: 0;
     }
     .products {
         flex-direction: column;
@@ -493,6 +507,7 @@ body {
     .footer .join-pack input,
     .footer .join-pack button {
         width: 100%;
+        margin-left: 30px;
     }
     .social-icons i {
         font-size: 20px;
