--- a/assets/css/products-page-styles.css
+++ b/assets/css/products-page-styles.css
@@ -407,6 +407,33 @@ body {
 
 /* For iPad */
 @media (min-width: 768px) and (max-width: 1366px) {
+    .header {
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+    }
+    .header img {
+        margin: 0;
+        max-height: 55px;
+    }
+    .nav {
+        flex-direction: row;
+        gap: 55px;
+        margin: 30px 0 0 0;
+        width: 100%;
+        text-align: center; 
+    }
+    .nav a {
+        font-size: 25px; 
+    }
+    .search-bar {
+        width: 80%;
+        margin: 10px 0;
+    }
+    .golden-section {
+        padding: 10px 0;
+    }
+    
     .footer .container {
         justify-content: space-between;
         padding: 0 50px;
@@ -467,7 +494,7 @@ body {
         justify-content: space-between;
     }
     .search-bar {
-        width: 100%;
+        width: 90%;
         margin: 10px 0;
     }
     .search-bar input {
