--- a/assets/css/products-page-styles.css
+++ b/assets/css/products-page-styles.css
@@ -337,13 +337,13 @@ body {
     padding: 0;
 }
 
-@media (min-width: 1200px){ /* For larger screens like laptop */
+@media (min-width: 1024px){ /* For larger screens like laptop */
     .header img {
         max-height: 50px;
     }
     .search-bar {
-        width: 300px;
-        margin-right: 10%;
+        width: 30%;
+        margin: 10px 0;
     }
     .nav a{
         font-size: 24px;
