--- a/assets/css/homepage-stylesheet.css
+++ b/assets/css/homepage-stylesheet.css
@@ -334,7 +334,7 @@ body {
         padding: 10px;
     }
     .header img {
-        margin: 0;
+        margin-left: 10px;
         max-height: 55px;
     }
     .nav {
@@ -565,19 +565,19 @@ body {
 @media (min-width: 1024px) {
     .header img {
         margin-left: 10px;
-        max-height: 60px;
+        max-height: 65px;
     }
     .search-bar {
         width: 350px;
     }
     .nav {
         flex-direction: row;
-        gap: 200px; 
+        gap: 150px; 
         margin: 10px 0;
     }
     .nav a {
-        font-size: 35px;
-        margin: 0; 
+        font-size: 40px;
+        margin-right: 5px; 
     }
     .carousel-item img {
         width: 100%;
